# Empty-Punch

./: .gitignore  .gitmodules  CMakeLists.txt  run.bat  run.sh
dependencies/: CMakeLists.txt
modelFiles/: Hex.blend  Hex.blend1  player.blend  player.blend1  player.glb
models/: hex.glb  player.glb
shaders/: animation.vert  player.frag  playerAnimation.vert  playerShader.frag  shader.frag  shader.vert  shader2.frag  shader2d.frag  shader2d.vert  skybox.frag  skybox.vert  text.frag
source/: CMakeLists.txt  main.c
source/buffors/: shadowInstance.c  shadowInstance.h
source/button/: button.c  button.h
source/camera/: camera.h
source/engine/assets/textures/functions/: textureSampler.c
source/engine/engineCore/: engineCore.c  engineCore.h
source/engine/engineCore/resourceManager/: resourceManager.c  resourceManager.h
source/engine/engineCore/soundManager/: soundManager.c
source/engine/engineCore/windowManager/: window.c  windowManager.c  windowManager.h
source/player/: player.c  player.h  playerCamera.c
source/sound/: sound.c  sound.h
source/state/: end.c  game.c  loadGame.c  loadResources.c  menu.c  simulation.c  state.h
